--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "cryptr": "^6.2.0",
     "express": "^4.18.2",
-    "follow-redirects": "^1.15.3"
+    "follow-redirects": "^1.15.3",
+    "mongodb": "^6.3.0"
   }
 }
