--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cryptr": "^6.2.0",
     "express": "^4.18.2",
     "follow-redirects": "^1.15.3",
-    "mongodb": "^6.3.0"
+    "mongodb": "^6.3.0",
+    "socket.io": "^4.7.2"
   }
 }
