--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "cryptr": "^6.2.0",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "follow-redirects": "^1.15.3",
     "mongodb": "^6.3.0",
